# totinko

./: Cargo.toml
examples/: ddd.rs  ddd_es.rs
totinko/: Cargo.toml  README.md
totinko-esdb/: Cargo.toml
totinko-esdb/config/: production.yaml
totinko-esdb/src/: settings.rs
totinko-esdb/tests/: connection_test.rs  settings_test.rs
totinko/src/: lib.rs
totinko/src/ddd/: aggregate.rs  command.rs  context.rs  core.rs  entity.rs  event.rs  mod.rs
totinko/src/es/: aggregate_repository.rs  aggregate_store.rs  context.rs  event.rs  event_publisher.rs  mem_store.rs  mod.rs  store.rs
totinko/src/func/: aggregate.rs  decider.rs  macros.rs  mod.rs  test.rs
totinko/src/func/event/: computation.rs  mod.rs  repository.rs  store.rs
totinko/tests/: ddd_test.rs  func_test.rs
totinko/tests/common/: helpers.rs
totinko/tests/ddd/: aggregate_test.rs  event_test.rs  mod.rs
totinko/tests/func/: decider_test.rs  event_computation_test.rs  mod.rs  repository_test.rs  store_test.rs
