[package]
name = "totinko-esdb"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
async-trait = "0.1"
color-eyre = "0.6"
config = "0.13"
derivative = "2.2"
eventstore = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

totinko = { path = "../totinko" }

[dependencies.uuid]
version = "1.3"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
